# rust-sample-parse-json

./: .gitlab-ci.yml  Cargo.toml  athletics.json
src/: main.rs
